--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,11 +4,13 @@ $body-bg: #f5f8fa;
 
 //colors
 $white: #fff;
+$lightgrey: #f0f0f0;
 $black: #000;
 $lightyellow: #fcea10;
 $yellow: #ffde00;
 $lightblue: #36a9e1;
 $blue: #1d71b8;
+$darkgrey: #303030;
 
 
 
