--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,6 +2,7 @@
 // Fonts
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 @import url(https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i);
+@import "helper/glyphicons";
 
 // Bootstrap
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
@@ -9,16 +10,19 @@
 
 // Helper
 @import "helper/animate";
+@import "helper/shadows-mat";
 
 // Variables
 @import "variables";
 
 // Components
 @import "components/caroussel";
+@import "components/portfolio";
 
 // Base
 @import "base/navigation";
 @import "base/forms";
+@import "base/footer";
 @import "base/layout";
 
 
