--- a/resources/assets/sass/base/_layout.scss
+++ b/resources/assets/sass/base/_layout.scss
@@ -1,6 +1,87 @@
 html, body {
-    width: 100%;
-    height: 100%;
     font-family: Raleway
 }
 
+body {
+    background-color: $lightgrey;
+}
+
+* {
+  border-radius: 0 !important;
+  background: transparent;
+}
+
+// Caroussel
+
+.full-screen {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.carousel-control .fa-angle-left, .carousel-control .fa-angle-right {
+    position: absolute;
+    top: 50%;
+    margin-top: -10px;
+    z-index: 5;
+    display: inline-block;
+    font-size: 1.5em;
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none;
+}
+
+.carousel-indicators, {
+    display: none;
+}
+
+.carousel-caption {
+    padding-bottom: 12em;
+}
+
+// Sections
+
+// Intro
+
+.intro {
+    text-align: center;
+    position: relative;
+}
+
+.introform {
+    background: transparent;
+    z-index: 10;
+    position: relative;
+    margin-top: -10em;
+    text-align: center;
+}
+
+.start {
+    background-color: rgba(0,0,0,0.6);
+    @include box-shadow(2);
+    padding: 1em 2em;
+    display: inline-block;
+    color: $white;
+}
+
+.start .form-group {
+    margin-right: 2em;
+}
+
+.start .btn {
+    vertical-align: bottom;
+}
+
+.about {
+    padding-top: 10em;
+    background-color: $white;
+    @include box-shadow(2);
+}
+
+.rooms {
+    padding-top: 7em;
+    padding-bottom: 5em;
+    background-color: $white;
+    @include box-shadow(2);
+}
