--- a/resources/assets/sass/base/_navigation.scss
+++ b/resources/assets/sass/base/_navigation.scss
@@ -1,77 +1,50 @@
+.navbar-custom {
+	background-color: $white;
+	border-color: $lightgrey;
+	@include box-shadow(2);
+}
 
-/*****************************************************
-Navbar
-*****************************************************/
-// .navbar {
-//     font-family: Lato;
-// }
+.navbar-custom .navbar-toggle{
+	padding-top: 25px;
+	.icon-bar {
+    	background-color: $black;
+    }
+}
 
+.navbar {
+	
+	padding: 0.5em 0 0.5em 0;
+}
 
-// .navbar .navbar-brand {
-//     padding: 0;
-// }
+#logo {
+	max-height: 70px;
+}
 
-// .navbar-custom {
-//     padding: 10px 0 10px 0;
-//     font-size: 1.3em;
-//     text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
-//     .img-responsive {
-//         height: auto;
-//         width: auto;
-//         max-height: 50px;
-//         max-width: 250px;
-//     }
-//     a {
-//         color: $white;
-//         &:hover{
-//             color: $yellow;
-//         }
-//     }
-// }
+.navbar-nav {
+	font-family: 'Raleway';
+	font-size: 1.3em;
+	li {
+		padding: 0;
+		a {
+			color: $black;
+			padding-top: 35px;
+			&:hover {
+				background-color: $white;
+				color: $blue;
+			}
+		}
+	}
+}
 
-// .navbar-default {
-//     font-size: 1.1em;
-//     .img-responsive {
-//         height: auto;
-//         width: auto;
-//         max-height: 40px;
-//         max-width: 250px;
-//     }
-// }
-.custom-nav {
-    .navbar .navbar-nav {
-        display: inline-block;
-        float: none;
-    }
-    .navbar {
-        text-align: center;
-        .img-responsive {
-            height: auto;
-            width: auto;
-            max-height: 80px;
-            max-width: 250px;
-        }
-        img {
-        //   -webkit-filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.7));
-        //   filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.7));
-        }
-    }
-    .navbar .logo {
-        margin: 2em 0 2em 0;
-    }
-    .navbar .nav {
-        font-size: 1.4em;
-        font-weight: 300;
-        letter-spacing: 0.1em;
-        a {
-            color: $white;
-            &:hover{
-                color: $lightblue;
-            }
-        }
-    }
-    .nav>li>a:hover, .nav>li>a:focus {
-        text-decoration: none;
-        background: none;
-    }
+.navbar-transparent .navbar-nav {
+	li {
+		a {
+			color: $white;
+			text-shadow: 0px 0px 8px rgba(150, 150, 150, 1);
+			&:hover {
+				background: transparent;
+				color: $blue;
+			}
+		}
+	}
 }
